# lib-stack

./: Makefile  README.md  api.py  setup.cfg  setup.py  ui.py
.github/workflows/: ci.yml  pypi-publish.yml
docker/: Dockerfile  docker-compose.yml
examples/: advanced_usage.py  basic_usage.py
my_library/: __init__.py  core.py  utils.py  version.py
tests/: __init__.py  test_core.py  test_utils.py
