# setup.cfg
[metadata]
name = my_library
description = A powerful library for XYZ
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/yourusername/my_library/issues
    Documentation = https://github.com/yourusername/my_library#readme
    Source Code = https://github.com/yourusername/my_library

[options]
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

[options.packages.find]
exclude =
    tests
    examples
    docs

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.12.0
    flake8>=3.9.0
    black>=21.5b2
docs =
    mkdocs>=1.1.0
    mkdocs-material>=7.0.0

# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel", "build>=0.7.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"